# libclog

./: CMakeLists.txt  build.sh  main.c  readme.md
inc/: clog.h
src/: clog.c
